Fixed alignment bug

--- a/style.css
+++ b/style.css
@@ -104,8 +104,9 @@ footer p {
 .supporting .col {
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  display: inline-block;
+  width: 200px;
   position: relative;
-  top: 40px;
 }
 
 .supporting img {
